# ucb-pricing

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_bp_ucb.ipynb  02_dynamic_bp_ucb.ipynb
src/ucb_pricing/: __init__.py  bp_ucb.py  dynamic_bp_ucb.py
